Fixed the overflow and z-index of navbar

--- a/apps/web/app/[locale]/global.scss
+++ b/apps/web/app/[locale]/global.scss
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  width: 100vw;
+  height: max-content;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
